apps/spring-camel/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-camel
  name: spring-camel
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-camel
  sessionAffinity: None
  type: ClusterIP
