apps/spring-camel/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-camel
  name: spring-camel
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: spring-camel
    weight: 100
